[package]
name = "chapter-02-helloecs"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_crossterm = { path = "../bevy_crossterm" }

[dependencies.bevy]
version = "0.4.0"
default-features = false
features = []
