[package]
name = "chapter-05-fov"
version = "0.1.0"
authors = ["AlephAlpha <alephalpha911@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy_crossterm = { path = "../bevy_crossterm" }
rand = "0.7.3"
roguelike_algorithms = { path = "../roguelike_algorithms" }

[dependencies.bevy]
version = "0.3.0"
default-features = false
features = []
